--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -56,5 +56,5 @@ p {
   font-size: 1em;}
 
 #image {padding-bottom: 10px;}
-.start {font-size: 2em; width: 40%;}
-button {font-family: 'Akbar'; width: 20%; background-color: #4F76DF; margin-top: 5px; color: #FFD90F; padding: 5px;}
+.start {font-size: 2em; }
+button {font-family: 'Akbar';background-color: #4F76DF; margin-top: 5px; color: #FFD90F; padding: 5px;}
